# build tests
add_executable(TestDerivatives TestDerivatives.cc)
add_executable(TestPseudoInverseMatrix TestPseudoInverseMatrix.cc)
add_executable(TestTiming TestTiming.cc)
add_executable(TestDerivativesPreproc TestDerivativesPreproc.cc)
add_executable(TestEvaluatePrime TestEvaluatePrime.cc)

add_test(TestDerivatives TestDerivatives)
add_test(TestPseudoInverseMatrix TestPseudoInverseMatrix)
add_test(TestTiming TestTiming)
add_test(TestDerivativesPreproc TestDerivativesPreproc)
add_test(TestEvaluatePrime TestEvaluatePrime)
